{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 119,
  "lineage": "5f792bb4-8198-e38a-dc05-7c096577f651",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myfirstinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:765250445637:instance/i-0e6c659bd5c8dfe78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6c659bd5c8dfe78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0266f3818da0f6fff",
            "private_dns": "ip-10-0-1-105.ec2.internal",
            "private_ip": "10.0.1.105",
            "public_ip": "3.234.206.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072aee9b31a33d4f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b85e025e22d8a74d",
            "tags": {
              "type": "myfirstinstance"
            },
            "tags_all": {
              "type": "myfirstinstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0481d0192fcedb4c3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.publicsubnet",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:internet-gateway/igw-0f2d99c714828edcb",
            "id": "igw-0f2d99c714828edcb",
            "owner_id": "765250445637",
            "tags": {
              "Name": "Igw"
            },
            "tags_all": {
              "Name": "Igw"
            },
            "vpc_id": "vpc-06923bf339d8330fc"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:route-table/rtb-01707b3881c0a0c5a",
            "id": "rtb-01707b3881c0a0c5a",
            "owner_id": "765250445637",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2d99c714828edcb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable"
            },
            "tags_all": {
              "Name": "routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06923bf339d8330fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:security-group/sg-0481d0192fcedb4c3",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481d0192fcedb4c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "765250445637",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06923bf339d8330fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:subnet/subnet-0a226a0818faf8f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a226a0818faf8f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765250445637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet"
            },
            "tags_all": {
              "Name": "privatesubnet"
            },
            "vpc_id": "vpc-06923bf339d8330fc"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:subnet/subnet-0b85e025e22d8a74d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b85e025e22d8a74d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "765250445637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-06923bf339d8330fc"
          },
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myfirstvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765250445637:vpc/vpc-06923bf339d8330fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e208727d1452383",
            "default_route_table_id": "rtb-0b693086b6db099e5",
            "default_security_group_id": "sg-098f5b1434ef99f64",
            "dhcp_options_id": "dopt-086a2f7b8574b7669",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06923bf339d8330fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b693086b6db099e5",
            "owner_id": "765250445637",
            "tags": {
              "Name": "myfirstvpc"
            },
            "tags_all": {
              "Name": "myfirstvpc"
            }
          }
        }
      ]
    }
  ]
}